# desk-thing

./: CMakeLists.txt  Main.qml  backend.cpp  main.cpp  spotify-desk-thing.pro
